--- a/src/pages/taxonomy.astro
+++ b/src/pages/taxonomy.astro
@@ -74,12 +74,18 @@ const taxoList = await agroupData(posts)
 </Layout>
 
 <style>
+  h2 {
+    color: var(--color-primary);
+  }
+
   h3 {
     opacity: 0.8;
   }
+
   li {
     padding: 0.5ch;
   }
+
   a {
     text-decoration: none;
     color: black;
